--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/styles/shared.css" />
-    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/home.css" />
   </head>
   <body>
     <header>
@@ -44,7 +44,7 @@
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
           <a class="navbar-brand" href="/home.html"
-            ><img src="/assets/logo.png" alt="flexiron gym logo"
+            ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -89,12 +89,12 @@
     <main>
       <section class="hero-section">
         <img
-          src="/assets/banners/home-banner-web.jpg"
+          src="assets/banners/home-banner-web.jpg"
           alt="flex iron gym banner"
           class="d-none d-md-block"
         />
         <img
-          src="/assets/banners/home-banner-mob.png"
+          src="assets/banners/home-banner-mob.png"
           alt="flex iron gym banner"
           class="d-md-none"
         />
@@ -109,7 +109,7 @@
           <div class="row gym-interiors gy-4 gx-md-5">
             <div class="col-md-4">
               <a class="img-wrapper" href="/unisex-vikroli.html">
-                <img src="/assets/home/featured/vikhroli.png" alt="vikhroli gym interior" />
+                <img src="assets/home/featured/vikhroli.png" alt="vikhroli gym interior" />
               </a>
               <a href="/unisex-vikroli.html" class="gym-location">
                 <p>Unisex Gym, Vikhroli</p>
@@ -117,7 +117,7 @@
             </div>
             <div class="col-md-4">
               <a class="img-wrapper" href="/women-only-vikroli.html">
-                <img src="/assets/home/featured/women.jpg" alt="women's gym interior" />
+                <img src="assets/home/featured/women.jpg" alt="women's gym interior" />
               </a>
               <a href="/women-only-vikroli.html" class="gym-location">
                 <p>Only Women's Gym, Vikhroli</p>
@@ -125,7 +125,7 @@
             </div>
             <div class="col-md-4">
               <a class="img-wrapper" href="/unisex-thane.html">
-                <img src="/assets/home/featured/thane.jpg" alt="thane gym interior" />
+                <img src="assets/home/featured/thane.jpg" alt="thane gym interior" />
               </a>
               <a href="/unisex-thane.html" class="gym-location">
                 <p>Unisex Gym, Thane</p>
@@ -142,26 +142,26 @@
           <div class="row gx-3 gx-md-4 gx-xl-5 trainers">
             <div class="col-1 d-none d-md-block">
               <div class="crosses">
-                <img src="/assets/X.svg" alt="yellow X" />
-                <img src="/assets/X.svg" alt="yellow X" />
-                <img src="/assets/X.svg" alt="yellow X" />
+                <img src="assets/X.svg" alt="yellow X" />
+                <img src="assets/X.svg" alt="yellow X" />
+                <img src="assets/X.svg" alt="yellow X" />
               </div>
             </div>
             <div class="col-6 col-md-5">
               <div class="img-wrapper left-wrapper">
-                <img src="/assets/founder.jpg" alt="flexiron founder" />
+                <img src="assets/founder.jpg" alt="flexiron founder" />
               </div>
             </div>
             <div class="col-6 col-md-5">
               <div class="img-wrapper right-wrapper">
-                <img src="/assets/trainer.webp" alt="flexiron trainers" />
+                <img src="assets/trainer.webp" alt="flexiron trainers" />
               </div>
             </div>
             <div class="col-1 d-none d-md-block">
               <div class="crosses">
-                <img src="/assets/X.svg" alt="yellow X" />
-                <img src="/assets/X.svg" alt="yellow X" />
-                <img src="/assets/X.svg" alt="yellow X" />
+                <img src="assets/X.svg" alt="yellow X" />
+                <img src="assets/X.svg" alt="yellow X" />
+                <img src="assets/X.svg" alt="yellow X" />
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
           <div class="row g-3 g-md-4 g-xl-5 wonders justify-content-center">
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/1.png" alt="gym section" />
+                <img src="assets/home/services/1.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Gymnasium</p>
                 </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/2.png" alt="gym section" />
+                <img src="assets/home/services/2.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Studio</p>
                 </div>
@@ -191,7 +191,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/3.png" alt="gym section" />
+                <img src="assets/home/services/3.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Cardio</p>
                 </div>
@@ -199,7 +199,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/4.png" alt="gym section" />
+                <img src="assets/home/services/4.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Strength Training</p>
                 </div>
@@ -207,7 +207,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/5.png" alt="gym section" />
+                <img src="assets/home/services/5.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Crossfit</p>
                 </div>
@@ -215,7 +215,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/6.png" alt="gym section" />
+                <img src="assets/home/services/6.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Personal Training</p>
                 </div>
@@ -223,7 +223,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/7.png" alt="gym section" />
+                <img src="assets/home/services/7.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Steam</p>
                 </div>
@@ -231,7 +231,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/8.png" alt="gym section" />
+                <img src="assets/home/services/8.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Yoga</p>
                 </div>
@@ -239,7 +239,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="img-wrapper">
-                <img src="/assets/home/services/9.png" alt="gym section" />
+                <img src="assets/home/services/9.png" alt="gym section" />
                 <div class="section-name-wrapper">
                   <p class="section-name">Zumba</p>
                 </div>
@@ -258,35 +258,35 @@
           <div class="testimonials">
             <div>
               <div class="img-wrapper">
-                <img src="/assets/profile-placeholder.png" alt="" />
+                <img src="assets/profile-placeholder.png" alt="" />
               </div>
               <p class="testimonial-name">Lorem ipsum.</p>
               <p class="testimonial-location">Ghatkopar</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/profile-placeholder.png" alt="" />
+                <img src="assets/profile-placeholder.png" alt="" />
               </div>
               <p class="testimonial-name">Lorem ipsum.</p>
               <p class="testimonial-location">Ghatkopar</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/profile-placeholder.png" alt="" />
+                <img src="assets/profile-placeholder.png" alt="" />
               </div>
               <p class="testimonial-name">Lorem ipsum.</p>
               <p class="testimonial-location">Ghatkopar</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/profile-placeholder.png" alt="" />
+                <img src="assets/profile-placeholder.png" alt="" />
               </div>
               <p class="testimonial-name">Lorem ipsum.</p>
               <p class="testimonial-location">Ghatkopar</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/profile-placeholder.png" alt="" />
+                <img src="assets/profile-placeholder.png" alt="" />
               </div>
               <p class="testimonial-name">Lorem ipsum.</p>
               <p class="testimonial-location">Ghatkopar</p>
