assets linking change

--- a/contact-us.html
+++ b/contact-us.html
@@ -16,8 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/shared.css" />
-    <link rel="stylesheet" href="/styles/contact.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
   </head>
   <body>
     <header>
@@ -27,7 +27,7 @@
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
           <a class="navbar-brand" href="/home.html"
-            ><img src="/assets/logo.png" alt="flexiron gym logo"
+            ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -74,12 +74,12 @@
     <main>
       <section class="hero-section">
         <img
-          src="/assets/banners/contact-banner-web.jpg"
+          src="assets/banners/contact-banner-web.jpg"
           alt="flex iron gym contact banner"
           class="d-none d-md-block"
         />
         <img
-          src="/assets/banners/contact-banner-mob.png"
+          src="assets/banners/contact-banner-mob.png"
           alt="flex iron gym contact banner"
           class="d-md-none"
         />
