--- a/unisex-vikroli.html
+++ b/unisex-vikroli.html
@@ -30,8 +30,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/shared.css" />
-    <link rel="stylesheet" href="/styles/gym-page.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/gym-page.css" />
   </head>
   <body>
     <header>
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
           <a class="navbar-brand" href="/home.html"
-            ><img src="/assets/logo.png" alt="flexiron gym logo"
+            ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -86,12 +86,12 @@
     <main>
       <section class="hero-section position-relative">
         <img
-          src="/assets/banners/unisex-vikhroli-banner-web.jpg"
+          src="assets/banners/unisex-vikhroli-banner-web.jpg"
           alt="flex iron vikhroli gym banner"
           class="d-none d-md-block"
         />
         <img
-          src="/assets/banners/unisex-vikhroli-banner-mob.png"
+          src="assets/banners/unisex-vikhroli-banner-mob.png"
           alt="flex iron vikhroli gym banner"
           class="d-md-none"
         />
@@ -112,72 +112,72 @@
           <div class="testimonials">
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/1.png" alt="gym interior" />
+                <img src="assets/vikhroli/1.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/20.png" alt="gym interior" />
+                <img src="assets/vikhroli/20.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/22.png" alt="gym interior" />
+                <img src="assets/vikhroli/22.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/23.png" alt="gym interior" />
+                <img src="assets/vikhroli/23.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/24.png" alt="gym interior" />
+                <img src="assets/vikhroli/24.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/25.png" alt="gym interior" />
+                <img src="assets/vikhroli/25.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/27.png" alt="gym interior" />
+                <img src="assets/vikhroli/27.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/29.png" alt="gym interior" />
+                <img src="assets/vikhroli/29.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/31.png" alt="gym interior" />
+                <img src="assets/vikhroli/31.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/32.png" alt="gym interior" />
+                <img src="assets/vikhroli/32.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/33.png" alt="gym interior" />
+                <img src="assets/vikhroli/33.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/34.png" alt="gym interior" />
+                <img src="assets/vikhroli/34.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/35.png" alt="gym interior" />
+                <img src="assets/vikhroli/35.png" alt="gym interior" />
               </div>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="/assets/vikhroli/28.png" alt="gym interior" />
+                <img src="assets/vikhroli/28.png" alt="gym interior" />
               </div>
             </div>
           </div>
@@ -200,7 +200,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -217,7 +217,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/2.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/2.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -234,7 +234,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/3.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/3.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -251,7 +251,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/4.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/4.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -269,7 +269,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/5.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/5.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -286,7 +286,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/6.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/6.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -303,7 +303,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/7.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/7.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -327,182 +327,182 @@
           <div class="gallery-carousel">
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/1.png" alt="gym gallery" />
+                <img src="assets/vikhroli/1.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/2.png" alt="gym gallery" />
+                <img src="assets/vikhroli/2.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/3.png" alt="gym gallery" />
+                <img src="assets/vikhroli/3.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/4.png" alt="gym gallery" />
+                <img src="assets/vikhroli/4.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/5.png" alt="gym gallery" />
+                <img src="assets/vikhroli/5.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/6.png" alt="gym gallery" />
+                <img src="assets/vikhroli/6.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/7.png" alt="gym gallery" />
+                <img src="assets/vikhroli/7.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/8.png" alt="gym gallery" />
+                <img src="assets/vikhroli/8.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/9.png" alt="gym gallery" />
+                <img src="assets/vikhroli/9.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/10.png" alt="gym gallery" />
+                <img src="assets/vikhroli/10.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/11.png" alt="gym gallery" />
+                <img src="assets/vikhroli/11.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/12.png" alt="gym gallery" />
+                <img src="assets/vikhroli/12.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/13.png" alt="gym gallery" />
+                <img src="assets/vikhroli/13.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/14.png" alt="gym gallery" />
+                <img src="assets/vikhroli/14.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/15.png" alt="gym gallery" />
+                <img src="assets/vikhroli/15.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/16.png" alt="gym gallery" />
+                <img src="assets/vikhroli/16.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/17.png" alt="gym gallery" />
+                <img src="assets/vikhroli/17.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/18.png" alt="gym gallery" />
+                <img src="assets/vikhroli/18.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/19.png" alt="gym gallery" />
+                <img src="assets/vikhroli/19.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/20.png" alt="gym gallery" />
+                <img src="assets/vikhroli/20.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/21.png" alt="gym gallery" />
+                <img src="assets/vikhroli/21.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/22.png" alt="gym gallery" />
+                <img src="assets/vikhroli/22.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/23.png" alt="gym gallery" />
+                <img src="assets/vikhroli/23.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/24.png" alt="gym gallery" />
+                <img src="assets/vikhroli/24.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/25.png" alt="gym gallery" />
+                <img src="assets/vikhroli/25.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/26.png" alt="gym gallery" />
+                <img src="assets/vikhroli/26.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/27.png" alt="gym gallery" />
+                <img src="assets/vikhroli/27.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/28.png" alt="gym gallery" />
+                <img src="assets/vikhroli/28.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/29.png" alt="gym gallery" />
+                <img src="assets/vikhroli/29.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/30.png" alt="gym gallery" />
+                <img src="assets/vikhroli/30.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/31.png" alt="gym gallery" />
+                <img src="assets/vikhroli/31.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/32.png" alt="gym gallery" />
+                <img src="assets/vikhroli/32.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/33.png" alt="gym gallery" />
+                <img src="assets/vikhroli/33.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/34.png" alt="gym gallery" />
+                <img src="assets/vikhroli/34.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/35.png" alt="gym gallery" />
+                <img src="assets/vikhroli/35.png" alt="gym gallery" />
               </div>
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="/assets/vikhroli/36.png" alt="gym gallery" />
+                <img src="assets/vikhroli/36.png" alt="gym gallery" />
               </div>
             </div>
           </div>
@@ -524,7 +524,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -541,7 +541,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -558,7 +558,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -575,7 +575,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
