--- a/women-only-vikroli.html
+++ b/women-only-vikroli.html
@@ -30,8 +30,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/shared.css" />
-    <link rel="stylesheet" href="/styles/gym-page.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/gym-page.css" />
   </head>
   <body>
     <header>
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
           <a class="navbar-brand" href="/home.html"
-            ><img src="/assets/logo.png" alt="flexiron gym logo"
+            ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -86,12 +86,12 @@
     <main>
       <section class="hero-section position-relative">
         <img
-          src="/assets/banners/unisex-vikhroli-banner-web.jpg"
+          src="assets/banners/unisex-vikhroli-banner-web.jpg"
           alt="flex iron vikhroli gym banner"
           class="d-none d-md-block"
         />
         <img
-          src="/assets/banners/unisex-vikhroli-banner-mob.png"
+          src="assets/banners/unisex-vikhroli-banner-mob.png"
           alt="flex iron vikhroli gym banner"
           class="d-md-none"
         />
@@ -151,7 +151,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/gym-page-services.png" alt="" />
+                    <img src="assets/gym-page-services.png" alt="" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -169,7 +169,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/gym-page-services.png" alt="" />
+                    <img src="assets/gym-page-services.png" alt="" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -228,7 +228,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/gym-page-services.png" alt="" />
+                    <img src="assets/gym-page-services.png" alt="" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -246,7 +246,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="/assets/gym-page-services.png" alt="" />
+                    <img src="assets/gym-page-services.png" alt="" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
