--- a/unisex-vikroli.html
+++ b/unisex-vikroli.html
@@ -40,7 +40,7 @@
       </div>
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
-          <a class="navbar-brand" href="/home.html"
+          <a class="navbar-brand" href="home.html"
             ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
@@ -57,25 +57,25 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav w-100 justify-content-evenly ms-lg-5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/home.html"
+                <a class="nav-link" aria-current="page" href="home.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/unisex-vikroli.html"
+                <a class="nav-link active" href="unisex-vikroli.html"
                   >Unisex Vikhroli</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/women-only-vikroli.html"
+                <a class="nav-link" href="women-only-vikroli.html"
                   >Only Women's Vikhroli</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/unisex-thane.html">Unisex Thane</a>
+                <a class="nav-link" href="unisex-thane.html">Unisex Thane</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact-us.html">Contact Us</a>
+                <a class="nav-link" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -635,13 +635,13 @@
             <p>Flex Iron</p>
             <nav>
               <ul>
-                <li><a href="/home.html#our-team">Our Team</a></li>
-                <li><a href="/unisex-vikroli.html#services">Services</a></li>
+                <li><a href="home.html#our-team">Our Team</a></li>
+                <li><a href="unisex-vikroli.html#services">Services</a></li>
                 <li>
-                  <a href="/unisex-vikroli.html#memberships">Membership</a>
+                  <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
-                <li><a href="/unisex-vikroli.html#offers">Offers</a></li>
-                <li><a href="/home.html#clients">Our Clients</a></li>
+                <li><a href="unisex-vikroli.html#offers">Offers</a></li>
+                <li><a href="home.html#clients">Our Clients</a></li>
               </ul>
             </nav>
           </div>
@@ -649,11 +649,11 @@
             <p>Our Gyms</p>
             <nav>
               <ul>
-                <li><a href="/unisex-vikroli.html">Unisex, Vikhroli</a></li>
+                <li><a href="unisex-vikroli.html">Unisex, Vikhroli</a></li>
                 <li>
-                  <a href="/women-only-vikroli.html">Women Only, Vikhroli</a>
+                  <a href="women-only-vikroli.html">Women Only, Vikhroli</a>
                 </li>
-                <li><a href="/unisex-thane.html">Unisex, Thane</a></li>
+                <li><a href="unisex-thane.html">Unisex, Thane</a></li>
               </ul>
             </nav>
           </div>
@@ -661,7 +661,7 @@
             <p>Contact Us</p>
             <nav>
               <ul>
-                <li><a href="/contact-us.html#locations">Locations</a></li>
+                <li><a href="contact-us.html#locations">Locations</a></li>
                 <li><a href="mailto:abc@example.com">Email</a></li>
                 <li>
                   <a
