--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
       </div>
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
-          <a class="navbar-brand" href="/home.html"
+          <a class="navbar-brand" href="home.html"
             ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
@@ -60,25 +60,25 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav w-100 justify-content-evenly ms-lg-5">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/home.html"
+                <a class="nav-link active" aria-current="page" href="home.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/unisex-vikroli.html"
+                <a class="nav-link" href="unisex-vikroli.html"
                   >Unisex Vikhroli</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/women-only-vikroli.html"
+                <a class="nav-link" href="women-only-vikroli.html"
                   >Only Women's Vikhroli</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/unisex-thane.html">Unisex Thane</a>
+                <a class="nav-link" href="unisex-thane.html">Unisex Thane</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact-us.html">Contact Us</a>
+                <a class="nav-link" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -108,26 +108,26 @@
           </p>
           <div class="row gym-interiors gy-4 gx-md-5">
             <div class="col-md-4">
-              <a class="img-wrapper" href="/unisex-vikroli.html">
+              <a class="img-wrapper" href="unisex-vikroli.html">
                 <img src="assets/home/featured/vikhroli.png" alt="vikhroli gym interior" />
               </a>
-              <a href="/unisex-vikroli.html" class="gym-location">
+              <a href="unisex-vikroli.html" class="gym-location">
                 <p>Unisex Gym, Vikhroli</p>
               </a>
             </div>
             <div class="col-md-4">
-              <a class="img-wrapper" href="/women-only-vikroli.html">
+              <a class="img-wrapper" href="women-only-vikroli.html">
                 <img src="assets/home/featured/women.jpg" alt="women's gym interior" />
               </a>
-              <a href="/women-only-vikroli.html" class="gym-location">
+              <a href="women-only-vikroli.html" class="gym-location">
                 <p>Only Women's Gym, Vikhroli</p>
               </a>
             </div>
             <div class="col-md-4">
-              <a class="img-wrapper" href="/unisex-thane.html">
+              <a class="img-wrapper" href="unisex-thane.html">
                 <img src="assets/home/featured/thane.jpg" alt="thane gym interior" />
               </a>
-              <a href="/unisex-thane.html" class="gym-location">
+              <a href="unisex-thane.html" class="gym-location">
                 <p>Unisex Gym, Thane</p>
               </a>
             </div>
@@ -303,13 +303,13 @@
             <p>Flex Iron</p>
             <nav>
               <ul>
-                <li><a href="/home.html#our-team">Our Team</a></li>
-                <li><a href="/unisex-vikroli.html#services">Services</a></li>
+                <li><a href="home.html#our-team">Our Team</a></li>
+                <li><a href="unisex-vikroli.html#services">Services</a></li>
                 <li>
-                  <a href="/unisex-vikroli.html#memberships">Membership</a>
+                  <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
-                <li><a href="/unisex-vikroli.html#offers">Offers</a></li>
-                <li><a href="/home.html#clients">Our Clients</a></li>
+                <li><a href="unisex-vikroli.html#offers">Offers</a></li>
+                <li><a href="home.html#clients">Our Clients</a></li>
               </ul>
             </nav>
           </div>
@@ -317,11 +317,11 @@
             <p>Our Gyms</p>
             <nav>
               <ul>
-                <li><a href="/unisex-vikroli.html">Unisex, Vikhroli</a></li>
+                <li><a href="unisex-vikroli.html">Unisex, Vikhroli</a></li>
                 <li>
-                  <a href="/women-only-vikroli.html">Women Only, Vikhroli</a>
+                  <a href="women-only-vikroli.html">Women Only, Vikhroli</a>
                 </li>
-                <li><a href="/unisex-thane.html">Unisex, Thane</a></li>
+                <li><a href="unisex-thane.html">Unisex, Thane</a></li>
               </ul>
             </nav>
           </div>
@@ -329,7 +329,7 @@
             <p>Contact Us</p>
             <nav>
               <ul>
-                <li><a href="/contact-us.html#locations">Locations</a></li>
+                <li><a href="contact-us.html#locations">Locations</a></li>
                 <li><a href="mailto:abc@example.com">Email</a></li>
                 <li>
                   <a
